Fix MSVC portability issues in CanvasWgpu headers
Prep for Windows/Visual C++ 2022 build without introducing
platform-specific code paths.

Fixes:
- LineCaps.h, Colors.h: static → inline on header-defined functions
  to avoid MSVC C4505 "unreferenced local function" warnings (each TU
  was getting its own copy; inline gives proper ODR-safe sharing)
- Colors.h: anonymous namespace for TRANSPARENT_BLACK → inline const
  at namespace scope (avoids internal linkage + static function mixing)
- Colors.h: added missing #include <cstdio> for sscanf
- LineCaps.h: removed unused #include <regex> (heavy header, not needed)
- Canvas.cpp: C-style cast → static_cast for buffer.Data()
- CMakeLists.txt: wrapped -Wno-* flags in generator expression to skip
  on MSVC; added _CRT_SECURE_NO_WARNINGS for sscanf usage in Colors.h

--- a/Polyfills/CanvasWgpu/CMakeLists.txt
+++ b/Polyfills/CanvasWgpu/CMakeLists.txt
@@ -34,7 +34,10 @@ target_link_libraries(babylon_canvas_wgpu_backend INTERFACE babylon_graphics_bac
 
 add_library(Canvas ${SOURCES})
 warnings_as_errors(Canvas)
-target_compile_options(Canvas PRIVATE -Wno-unused-parameter -Wno-unused-variable)
+target_compile_options(Canvas PRIVATE
+    $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wno-unused-parameter -Wno-unused-variable>)
+target_compile_definitions(Canvas PRIVATE
+    $<$<CXX_COMPILER_ID:MSVC>:_CRT_SECURE_NO_WARNINGS>)
 
 target_include_directories(Canvas
     PUBLIC "Include"
