--- a/.github/jobs/cmake.yml
+++ b/.github/jobs/cmake.yml
@@ -40,6 +40,7 @@ steps:
   - script: |
       curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
       echo "##vso[task.prependpath]$HOME/.cargo/bin"
+      rustup target add aarch64-apple-ios aarch64-apple-ios-sim x86_64-apple-ios
       rustc --version
       cargo --version
     condition: not(contains('${{parameters.vmImage}}', 'windows'))
