Fix Ubuntu CI: suppress unused instance warning and add libvulkan-dev
Prefix create_local_surface's instance parameter with underscore —
it is only used inside platform-specific #[cfg] blocks and is unused
on Linux where no surface backend is wired yet.

Install libvulkan-dev on the Ubuntu CI runner so vulkan/vulkan.h is
available for the Vulkan backend headers.

--- a/.github/jobs/linux.yml
+++ b/.github/jobs/linux.yml
@@ -24,7 +24,7 @@ jobs:
 
       - script: |
           sudo apt-get update
-          sudo apt-get install libjavascriptcoregtk-4.1-dev libgl1-mesa-dev libcurl4-openssl-dev libwayland-dev clang
+          sudo apt-get install libjavascriptcoregtk-4.1-dev libgl1-mesa-dev libcurl4-openssl-dev libwayland-dev libvulkan-dev clang
         displayName: "Install packages"
 
       - script: |
