Fix Win32 MSVC and Android CI failures
Canvas.cpp: remove ObjectWrap::Value() call in Dispose() — the method
is not reliably available on MSVC.  The _context JS property is already
unreachable after m_contextObject.Reset().

Path2D.cpp: rename NSVGpath loop variable from 'path' to 'svgPath' to
avoid C4456 shadow warning against the outer NativeCanvasPath2D* path.

cmake.yml: add aarch64-linux-android Rust target for Android NDK
cross-compilation.

--- a/.github/jobs/cmake.yml
+++ b/.github/jobs/cmake.yml
@@ -40,7 +40,7 @@ steps:
   - script: |
       curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain stable
       echo "##vso[task.prependpath]$HOME/.cargo/bin"
-      rustup target add aarch64-apple-ios aarch64-apple-ios-sim x86_64-apple-ios
+      rustup target add aarch64-apple-ios aarch64-apple-ios-sim x86_64-apple-ios aarch64-linux-android
       rustc --version
       cargo --version
     condition: not(contains('${{parameters.vmImage}}', 'windows'))
