Fix MSVC tolower truncation warning and Android bindgen sysroot
Colors.h: cast std::tolower return (int) back to char in the
std::transform lambda to silence C4244.

CMakeLists.txt: pass BINDGEN_EXTRA_CLANG_ARGS with the NDK sysroot
and target triple so bindgen uses Android headers instead of the
host glibc headers when cross-compiling.

--- a/Core/GraphicsWgpu/CMakeLists.txt
+++ b/Core/GraphicsWgpu/CMakeLists.txt
@@ -162,10 +162,12 @@ if(ANDROID)
 
     string(TOUPPER "${RUST_TARGET_TRIPLE}" RUST_TARGET_TRIPLE_ENV)
     string(REPLACE "-" "_" RUST_TARGET_TRIPLE_ENV "${RUST_TARGET_TRIPLE_ENV}")
+    set(ANDROID_SYSROOT "${ANDROID_NDK_ROOT}/toolchains/llvm/prebuilt/${ANDROID_HOST_TAG}/sysroot")
     list(APPEND RUST_PLATFORM_ENV
         "CARGO_TARGET_${RUST_TARGET_TRIPLE_ENV}_LINKER=${RUST_ANDROID_LINKER}"
         "CC_${RUST_TARGET_TRIPLE_ENV}=${RUST_ANDROID_LINKER}"
-        "AR_${RUST_TARGET_TRIPLE_ENV}=${ANDROID_LLVM_BIN_DIR}/llvm-ar")
+        "AR_${RUST_TARGET_TRIPLE_ENV}=${ANDROID_LLVM_BIN_DIR}/llvm-ar"
+        "BINDGEN_EXTRA_CLANG_ARGS=--sysroot=${ANDROID_SYSROOT} --target=${RUST_ANDROID_LINKER_TRIPLE}${ANDROID_PLATFORM_LEVEL}")
 elseif(IOS)
     set(BABYLON_IOS_SIMULATOR_BUILD OFF)
     if(PLATFORM MATCHES "SIMULATOR")
