--- a/.github/jobs/linux.yml
+++ b/.github/jobs/linux.yml
@@ -28,34 +28,34 @@ jobs:
         displayName: "Install packages"
 
       - script: |
-          cmake -G Ninja -B build -D JAVASCRIPTCORE_LIBRARY=/usr/lib/x86_64-linux-gnu/libjavascriptcoregtk-4.1.so -D NAPI_JAVASCRIPT_ENGINE=${{parameters.JSEngine}} -D CMAKE_BUILD_TYPE=RelWithDebInfo -D BX_CONFIG_DEBUG=ON -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D OpenGL_GL_PREFERENCE=GLVND -D BABYLON_DEBUG_TRACE=ON -D ENABLE_SANITIZERS=$(SANITIZER_FLAG) .
-          ninja -C build
+          cmake -G Ninja -B build/Linux -D JAVASCRIPTCORE_LIBRARY=/usr/lib/x86_64-linux-gnu/libjavascriptcoregtk-4.1.so -D NAPI_JAVASCRIPT_ENGINE=${{parameters.JSEngine}} -D CMAKE_BUILD_TYPE=RelWithDebInfo -D BX_CONFIG_DEBUG=ON -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D OpenGL_GL_PREFERENCE=GLVND -D BABYLON_DEBUG_TRACE=ON -D ENABLE_SANITIZERS=$(SANITIZER_FLAG) .
+          ninja -C build/Linux
         displayName: "Build X11"
 
       # Memory leaks on CI is disabled due to memory leaks reported with xvfb and impossible to add to ignore list.
       # See https://github.com/BabylonJS/BabylonNative/issues/1575
 
       - script: |
-          cd build/Apps/Playground
+          cd build/Linux/Apps/Playground
           # Command line to suppress false positive memory leaks :
-          # ASAN_OPTIONS=detect_leaks=1 LSAN_OPTIONS=suppressions=../../../.github/asan_suppress.txt xvfb-run ./Playground app:///Scripts/validation_native.js
+          # ASAN_OPTIONS=detect_leaks=1 LSAN_OPTIONS=suppressions=../../../../.github/asan_suppress.txt xvfb-run ./Playground app:///Scripts/validation_native.js
           xvfb-run ./Playground app:///Scripts/validation_native.js
         displayName: "Validation Tests"
 
       - script: |
-          cd build/Apps/UnitTests
+          cd build/Linux/Apps/UnitTests
           xvfb-run ./UnitTests
         displayName: "Unit Tests"
 
       - task: PublishBuildArtifacts@1
         inputs:
           artifactName: "${{parameters.name}} Rendered Pictures"
-          pathtoPublish: "build/Apps/Playground/Results"
+          pathtoPublish: "build/Linux/Apps/Playground/Results"
         displayName: "Publish Tests ${{parameters.name}} Results"
         condition: always()
       - task: PublishBuildArtifacts@1
         inputs:
           artifactName: "${{parameters.name}} Error Pictures"
-          pathtoPublish: "build/Apps/Playground/Errors"
+          pathtoPublish: "build/Linux/Apps/Playground/Errors"
         displayName: "Publish Tests ${{parameters.name}} Errors"
         condition: failed()
