--- a/.github/jobs/uwp.yml
+++ b/.github/jobs/uwp.yml
@@ -32,12 +32,12 @@ jobs:
           vmImage: ${{parameters.vmImage}}
 
       - script: |
-          cmake -G "Visual Studio 17 2022" -B build${{variables.solutionName}} -D CMAKE_SYSTEM_NAME=WindowsStore -D CMAKE_SYSTEM_VERSION=10.0 ${{variables.jsEngineDefine}} -A ${{parameters.platform}} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD)  -D BABYLON_DEBUG_TRACE=ON
+          cmake -G "Visual Studio 17 2022" -B build/${{variables.solutionName}} -D CMAKE_SYSTEM_NAME=WindowsStore -D CMAKE_SYSTEM_VERSION=10.0 ${{variables.jsEngineDefine}} -A ${{parameters.platform}} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BABYLON_DEBUG_TRACE=ON
         displayName: "Generate ${{variables.solutionName}} solution"
 
       - task: VSBuild@1
         inputs:
-          solution: "build${{variables.solutionName}}/BabylonNative.sln"
+          solution: "build/${{variables.solutionName}}/BabylonNative.sln"
           maximumCpuCount: true
           configuration: "RelWithDebInfo"
           msbuildArgs: "/p:AppxPackageSigningEnabled=false"
