Disable unity build when arc is enabled

--- a/Plugins/NativeCamera/CMakeLists.txt
+++ b/Plugins/NativeCamera/CMakeLists.txt
@@ -36,6 +36,7 @@ elseif(APPLE)
     set(ADDITIONAL_LIBRARIES
         PRIVATE "-framework CoreMedia -framework AVFoundation")
     enable_objc_arc(NativeCamera)
+    set_property(TARGET NativeCamera PROPERTY UNITY_BUILD false)
 endif()
 
 target_link_libraries(NativeCamera
