--- a/.github/jobs/win32.yml
+++ b/.github/jobs/win32.yml
@@ -44,12 +44,12 @@ jobs:
 
       # BGFX_CONFIG_MAX_FRAME_BUFFERS is set so enough Framebuffers are available before V8 starts disposing unused ones
       - script: |
-          cmake -G "Visual Studio 17 2022" -B build${{variables.solutionName}} -A ${{parameters.platform}} ${{variables.jsEngineDefine}} -D BX_CONFIG_DEBUG=ON -D GRAPHICS_API=${{parameters.graphics_api}} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BGFX_CONFIG_MAX_FRAME_BUFFERS=256 -D BABYLON_DEBUG_TRACE=ON -D ENABLE_SANITIZERS=$(SANITIZER_FLAG)
+          cmake -G "Visual Studio 17 2022" -B build/${{variables.solutionName}} -A ${{parameters.platform}} ${{variables.jsEngineDefine}} -D BX_CONFIG_DEBUG=ON -D GRAPHICS_API=${{parameters.graphics_api}} -D CMAKE_UNITY_BUILD=$(UNITY_BUILD) -D BGFX_CONFIG_MAX_FRAME_BUFFERS=256 -D BABYLON_DEBUG_TRACE=ON -D ENABLE_SANITIZERS=$(SANITIZER_FLAG)
         displayName: "Generate ${{variables.solutionName}} solution"
 
       - task: MSBuild@1
         inputs:
-          solution: "build${{variables.solutionName}}/BabylonNative.sln"
+          solution: "build/${{variables.solutionName}}/BabylonNative.sln"
           maximumCpuCount: true
           configuration: "RelWithDebInfo"
         displayName: "Build ${{variables.solutionName}}"
@@ -84,28 +84,27 @@ jobs:
         displayName: "Disable JIT Debugger for Script"
 
       - script: |
-          cd build${{variables.solutionName}}\Apps\Playground
-          cd RelWithDebInfo
+          cd build\${{variables.solutionName}}\Apps\Playground\RelWithDebInfo
           Playground app:///Scripts/validation_native.js
         displayName: "Validation Tests"
 
       - task: PublishBuildArtifacts@1
         inputs:
           artifactName: "${{variables.solutionName}} - ${{parameters.graphics_api}} Rendered Pictures"
-          pathtoPublish: "build${{variables.solutionName}}/Apps/Playground/Results"
+          pathtoPublish: "build/${{variables.solutionName}}/Apps/Playground/Results"
         displayName: "Publish Tests ${{variables.solutionName}} Results"
         condition: always()
 
       - task: PublishBuildArtifacts@1
         inputs:
           artifactName: "${{variables.solutionName}} - ${{parameters.graphics_api}} Error Pictures"
-          pathtoPublish: "build${{variables.solutionName}}/Apps/Playground/Errors"
+          pathtoPublish: "build/${{variables.solutionName}}/Apps/Playground/Errors"
         displayName: "Publish Tests ${{variables.solutionName}} Errors"
         condition: failed()
 
       - task: CopyFiles@2
         inputs:
-          sourceFolder: "build${{variables.solutionName}}/Apps/Playground/RelWithDebInfo"
+          sourceFolder: "build/${{variables.solutionName}}/Apps/Playground/RelWithDebInfo"
           contents: Playground.*
           targetFolder: "$(Build.ArtifactStagingDirectory)/Dumps"
           cleanTargetFolder: false
@@ -113,14 +112,14 @@ jobs:
         condition: failed()
 
       - script: |
-          cd build${{variables.solutionName}}\Apps\UnitTests
+          cd build\${{variables.solutionName}}\Apps\UnitTests
           cd RelWithDebInfo
           UnitTests
         displayName: "Unit Tests"
 
       - task: CopyFiles@2
         inputs:
-          sourceFolder: "build${{variables.solutionName}}/Apps/UnitTests/RelWithDebInfo"
+          sourceFolder: "build/${{variables.solutionName}}/Apps/UnitTests/RelWithDebInfo"
           contents: UnitTests.*
           targetFolder: "$(Build.ArtifactStagingDirectory)/Dumps"
           cleanTargetFolder: false
