--- a/Apps/Playground/Scripts/config.json
+++ b/Apps/Playground/Scripts/config.json
@@ -5,7 +5,11 @@
             "title": "Gaussian Splatting Compressed ply SH",
             "playgroundId": "#U8O4EP#1",
             "renderCount": 15,
-            "referenceImage": "gsplat-compressedply-sh.png"
+            "referenceImage": "gsplat-compressedply-sh.png",
+            "excludedGraphicsApis": [ "OpenGL" ],
+            "comments": {
+                "OpenGL": "Test doesn't render correctly"
+            }
         },
         {
             "title": "Gaussian Splatting Update Data",
