--- a/Apps/Playground/Android/gradle.properties
+++ b/Apps/Playground/Android/gradle.properties
@@ -12,3 +12,9 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 # jsEngine=JavaScriptCore
+
+# AGP 9.0 behavior opt-outs (project still uses old support libraries, no Kotlin)
+android.useAndroidx=false
+android.defaults.buildfeatures.shaders=false
+android.defaults.buildfeatures.resvalues=false
+android.uniquePackageNames=false
